--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-Hello World
+<!doctype html>
+<html>
+  <head>
+    <title>DEWMRAX Inc.</title>
+  </head>
+  <body>
+    <div style="border:3px solid black;margin-left:25px;margin-top:25px;margin-right:25px;margin-bottom:25px;padding:2ex;width:650px;">
+      <header>
+        <h1>DEWMRAX Inc.</h1>
+        <p></p>
+      </header>
+      <section>
+        <p>We build the BEST autonomous trading strategies with a focus on Cryptocurrency Arbitrage</br></p>
+        <p></p>The materials on this website are for illustration and discussion purposes only and do not constitute an offering. An offering may be made only by delivery of a confidential offering memorandum to appropriate investors. Past performance is no guarantee of future results.</p>
+      </section>
+      <section>
+        <p>Contact: info@dewmrax.io</p>
+      </section>
+      </div>
+  </body>
+</html>
