--- a/index.html
+++ b/index.html
@@ -3,15 +3,39 @@
   <head>
     <title>DEWMRAX Inc.</title>
   </head>
+  <style>
+      #header{
+          width:100%;
+          text-align:center;
+      }
+      #footer{
+          width:100%;
+          text-align:center;
+      }
+      #subheader{
+          font-family:Arial;
+          margin-top:4px;
+      }
+  </style>
   <body>
-    <div style="border:3px solid black;margin-left:25px;margin-top:25px;margin-right:25px;margin-bottom:25px;padding:2ex;width:650px;">
-      <header>
-        <h1>DEWMRAX Inc.</h1>
-        <p></p>
-      </header>
-      <section>
-        <p>Contact: info@dewmrax.io</p>
-      </section>
-      </div>
+    <div id="header">
+        <img src="http://dewmrax.io/logo.png" width="600px"/>
+        <p id="subheader">
+        DEWMRAX Inc. is a cryptocurrency investment company that currently focuses on autonomous high frequency trading. We have prepared this information to help you start safely investing in cryptocurrency entirely on your own.
+        </p>
+    </div>
+
+    <div id="navigation">
+      <a href="links.html">Links</a>
+      <a href="links.html">Links</a>
+      <a href="links.html">Links</a>
+      <a href="links.html">Links</a>
+    </div>
+
+    <div id="footer">
+        <p id="subheader">
+        This is not investment advice. The materials here are for educational purposes only. Always do your own research.
+        </p>
+    </div>
   </body>
 </html>
