--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
   </head>
   <style>
       .header{
-          width:80%;
+          width:100%;
           text-align:center;
       }
       .header.img{
+          max-width:600px;
+          width:80%;
+      }
+      .header.p{
           width:80%;
       }
       .footer{
