--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
           width:100%;
           text-align:center;
       }
-      .header img{
+      .header>img{
           max-width:600px;
           width:80%;
       }
-      .header p{
+      .header>p{
           width:80%;
       }
       .footer{
