--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
     </div>
 
     <div class="navigation">
-      <a href="links.html">Links</a>
-      <a href="links.html">Links</a>
-      <a href="links.html">Links</a>
+      <a href="links.html">Links</a>&nbsp;&nbsp;
+      <a href="links.html">Links</a>&nbsp;&nbsp;
+      <a href="links.html">Links</a>&nbsp;&nbsp;
       <a href="links.html">Links</a>
     </div>
 
