--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
           width:80%;
       }
       .header>p{
-          width:80%;
+          width:70%;
+          display:inline-block;
       }
       .footer{
           position: absolute;
