--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <title>DEWMRAX Inc.</title>
   </head>
   <style>
+      div{
+        text-align:center;
+      }
       .header{
           width:100%;
-          text-align:center;
       }
       .header>img{
           max-width:600px;
