--- a/index.html
+++ b/index.html
@@ -40,10 +40,29 @@
     </div>
 
     <div class="navigation">
-      <a href="links.html">Links</a>&nbsp;&nbsp;
-      <a href="links.html">Links</a>&nbsp;&nbsp;
-      <a href="links.html">Links</a>&nbsp;&nbsp;
+      <a href="index.html">Links</a>&nbsp;&nbsp;
+      <a href="security.html">Security</a>&nbsp;&nbsp;
+      <a href="exchanges.html">Exchanges</a>&nbsp;&nbsp;
       <a href="links.html">Links</a>
+    </div>
+
+    <div class="body">
+      <h3>USD Exchanges</h3>
+      <a href="https://gemini.com">Gemini</a>
+      <a href="https://coinbase.com">Coinbase</a>
+    </div>
+
+    <div class="body">
+      <h3>Crypto Exchanges</h3>
+      <a href="https://bittrex.com">Bittrex</a>
+      <a href="https://binance.com">Binance</a>
+    </div>
+
+    <div class="body">
+      <h3>News</h3>
+      <a href="https://coinmarketcap.com">Coin Market Cap</a>
+      <a href="https://blockgeeks.com/guides/">Blockgeeks Guides</a>
+      <a href="https://www.reddit.com/user/drewshaver/m/core_crypto/">Multi Reddit</a>
     </div>
 
     <div class="footer">
