--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
       div{
         text-align:center;
       }
+      .body{
+          margin-top:30px;
+      }
       .header{
           width:100%;
       }
@@ -19,6 +22,7 @@
           display:inline-block;
       }
       .footer{
+          margin-top:30px;
           position: absolute;
           right: 0;
           bottom: 0;
@@ -48,21 +52,21 @@
 
     <div class="body">
       <h3>USD Exchanges</h3>
-      <a href="https://gemini.com">Gemini</a>
-      <a href="https://coinbase.com">Coinbase</a>
+      <p><a href="https://gemini.com">Gemini</a></p>
+      <p><a href="https://coinbase.com">Coinbase</a><p>
     </div>
 
     <div class="body">
       <h3>Crypto Exchanges</h3>
-      <a href="https://bittrex.com">Bittrex</a>
-      <a href="https://binance.com">Binance</a>
+      <p><a href="https://bittrex.com">Bittrex</a></p>
+      <p><a href="https://binance.com">Binance</a></p>
     </div>
 
     <div class="body">
       <h3>News</h3>
-      <a href="https://coinmarketcap.com">Coin Market Cap</a>
-      <a href="https://blockgeeks.com/guides/">Blockgeeks Guides</a>
-      <a href="https://www.reddit.com/user/drewshaver/m/core_crypto/">Multi Reddit</a>
+      <p><a href="https://coinmarketcap.com">Coin Market Cap</a></p>
+      <p><a href="https://blockgeeks.com/guides/">Blockgeeks Guides</a></p>
+      <p><a href="https://www.reddit.com/user/drewshaver/m/core_crypto/">Multi Reddit</a></p>
     </div>
 
     <div class="footer">
