--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       .subheader{
           font-family:Arial;
           margin-top:4px;
+          max-width:400px;
       }
   </style>
   <body>
