--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
           margin-top:4px;
           max-width:400px;
       }
+      .navigation>a{
+        font-size:16pt;
+        font-style:bold;
+        font-family:Arial;
+      }
   </style>
   <body>
     <div class="header">
@@ -51,19 +56,19 @@
     </div>
 
     <div class="body">
-      <h3>USD Exchanges</h3>
+      <h2>USD Exchanges</h2>
       <p><a href="https://gemini.com">Gemini</a></p>
       <p><a href="https://coinbase.com">Coinbase</a><p>
     </div>
 
     <div class="body">
-      <h3>Crypto Exchanges</h3>
+      <h2>Crypto Exchanges</h2>
       <p><a href="https://bittrex.com">Bittrex</a></p>
       <p><a href="https://binance.com">Binance</a></p>
     </div>
 
     <div class="body">
-      <h3>News</h3>
+      <h2>News</h2>
       <p><a href="https://coinmarketcap.com">Coin Market Cap</a></p>
       <p><a href="https://blockgeeks.com/guides/">Blockgeeks Guides</a></p>
       <p><a href="https://www.reddit.com/user/drewshaver/m/core_crypto/">Multi Reddit</a></p>
