--- a/index.html
+++ b/index.html
@@ -32,12 +32,13 @@
       .subheader{
           font-family:Arial;
           margin-top:4px;
-          max-width:400px;
       }
       .navigation>a{
-        font-size:16pt;
+        font-size:14pt;
         font-style:bold;
         font-family:Arial;
+        margin-right:20px;
+        margin-left:20px;
       }
   </style>
   <body>
@@ -49,9 +50,9 @@
     </div>
 
     <div class="navigation">
-      <a href="index.html">Links</a>&nbsp;&nbsp;
-      <a href="security.html">Security</a>&nbsp;&nbsp;
-      <a href="exchanges.html">Exchanges</a>&nbsp;&nbsp;
+      <a href="index.html">Links</a>
+      <a href="security.html">Wallet Security</a>
+      <a href="exchanges.html">Exchanges</a>
       <a href="links.html">Links</a>
     </div>
 
