--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       }
       .navigation>a{
         font-size:14pt;
-        font-style:bold;
+        font-weight:bold;
         font-family:Arial;
         margin-right:20px;
         margin-left:20px;
