--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
       }
       .navigation>a{
         font-size:14pt;
-        font-weight:bold;
         font-family:Arial;
         margin-right:20px;
         margin-left:20px;
@@ -50,7 +49,7 @@
     </div>
 
     <div class="navigation">
-      <a href="index.html">Links</a>
+      <b>Links</b>
       <a href="security.html">Wallet Security</a>
       <a href="exchanges.html">Exchanges</a>
       <a href="links.html">Links</a>
