--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           font-family:Arial;
           margin-top:4px;
       }
-      .navigation>a{
+      .navigation{
         font-size:14pt;
         font-family:Arial;
         margin-right:20px;
