--- a/index.html
+++ b/index.html
@@ -33,11 +33,18 @@
           font-family:Arial;
           margin-top:4px;
       }
-      .navigation{
+      .navigation>a{
         font-size:14pt;
         font-family:Arial;
         margin-right:20px;
         margin-left:20px;
+      }
+      .navigation>p{
+        font-size:14pt;
+        font-family:Arial;
+        margin-right:20px;
+        margin-left:20px;
+        display:inline-block;
       }
   </style>
   <body>
@@ -49,7 +56,7 @@
     </div>
 
     <div class="navigation">
-      <b>Links</b>
+      <p><b>Links</b></p>
       <a href="security.html">Wallet Security</a>
       <a href="exchanges.html">Exchanges</a>
       <a href="links.html">Links</a>
