--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div class="body">
       <h2>USD Exchanges</h2>
       <p><a href="https://gemini.com">Gemini</a></p>
-      <p><a href="https://coinbase.com">Coinbase</a><p>
+      <p><a href="https://coinbase.com">Coinbase</a></p>
     </div>
 
     <div class="body">
