--- a/security.html
+++ b/security.html
@@ -9,7 +9,10 @@
       }
       .body{
           margin-top:30px;
-          width:80%;
+          width:100%;
+      }
+      .body>p{
+          width:75%;
       }
       .header{
           width:100%;
