--- a/security.html
+++ b/security.html
@@ -13,6 +13,7 @@
       }
       .body>p{
           width:75%;
+          margin-top:14px;
           display:inline-block;
       }
       .header{
@@ -77,7 +78,7 @@
     </div>
 
     <div class="body">
-      <h2>Terminology -- Mnemonic</h2>
+      <h2>Terminology: What is a Mnemonic</h2>
       <p> This will be a list of 12-24 english words, taken from a master list of 2048 possible words, and is also often referred to as your private key or seed phrase (technically these terms each mean something slightly different, but are pretty much the same for your purposes). These words are what you store in the cryptosteel. Every word is unique given the first 4 letters, e.g., these and thesaurus cannot both be words because they both start with 'thes'. So you'll notice the cryptosteel only has space for 4 letters on each word.</p>
       <p class="warning">It is incredibly important that you keep your mnemonic safe from prying eyes. NEVER store it digitally -- in a text file, in an encrypted file, in a picture, just don't do it. That will violate the security model of the Trezor (which is that your mnemonic only gets stored on the Trezor and is never exposed to a potentially compromised machine, all general purpose computing devices are potentially infected).</p>
     </div>
