--- a/security.html
+++ b/security.html
@@ -68,7 +68,6 @@
       <a href="index.html">Links</a>
       <p><b>Wallet Security</b></p>
       <a href="exchanges.html">Exchanges</a>
-      <a href="links.html">Links</a>
     </div>
 
     <div class="body">
@@ -78,9 +77,26 @@
     </div>
 
     <div class="body">
-      <h2>Terminology: What is a Mnemonic</h2>
+      <h2>Terminology: What is a Mnemonic?</h2>
       <p> This will be a list of 12-24 english words, taken from a master list of 2048 possible words, and is also often referred to as your private key or seed phrase (technically these terms each mean something slightly different, but are pretty much the same for your purposes). These words are what you store in the cryptosteel. Every word is unique given the first 4 letters, e.g., these and thesaurus cannot both be words because they both start with 'thes'. So you'll notice the cryptosteel only has space for 4 letters on each word.</p>
       <p class="warning">It is incredibly important that you keep your mnemonic safe from prying eyes. NEVER store it digitally -- in a text file, in an encrypted file, in a picture, just don't do it. That will violate the security model of the Trezor (which is that your mnemonic only gets stored on the Trezor and is never exposed to a potentially compromised machine, all general purpose computing devices are potentially infected).</p>
+    </div>
+
+    <div class="body">
+      <h2>Warnings</h2>
+      <p class="warning">Before moving significant funds around, always start with a test transaction of a small amount to make sure you got everything right. At some point you may be comfortable skipping this step but definitely not at first, for a while. Also, it is very important that you are able to recover your Trezor from the mnemonic. What you should do, to start, is transfer a small amount of BTC, like .005. Then, complete the process of storing your mnemonic in your cryptosteel (transferring the words from paper to the steel). Then, wipe your Trezor, and follow instructions to recover Trezor from mnemonic, using your cryptosteel as a reference (don't use a paper backup, best to make sure cryptosteel is correct). Now, if you load up your wallet and have access to the test amount of BTC, great! You can now lose or otherwise destroy your Trezor and rest assured that you can recover from the cryptosteel.</p>
+    </div>
+
+    <div class="body">
+      <h2>Another Warning</h2>
+      <p class="warning">It bears repeating, one thing I want to make sure is to understand the importance of guarding and securing your mnemonic. Anyone that views and remembers mnemonic can take all your crypto. Never ever store this anywhere digitally, except for loading it into the Trezor. And, if you lose your mnemonic AND your Trezor breaks, or becomes otherwise unusable, your crypto are all lost forever. Obviously, this would be quite devastating -- and this is why the Trezor and cryptosteel are so important. The Trezor protects your private key from hackers, in case your computer is infected with malware. And the cryptosteel protects the mnemonic from fire, flood, etc.</p>
+    </div>
+
+    <div class="body">
+      <h2>Passphrase</h2>
+      <p>One big decision you will have to make is whether to use a passphrase or not. The point of a passphrase is to protect your mnemonic -- if you have a strong passphrase and someone gains access to your mnemonic, it is of no value to them. The passphrase is like an extra word tacked on to the end of your mnemonic, though it is free form like a password, and you should never write it down. If you do use one, make sure it has upper case, lower case, numbers , and symbols, should be at least 10 characters, ideally longer. There are pros and cons to both using a passphrase vs not using a passphrase.</p>
+      <p>Without a passphrase, there is nothing to forget. You are protected from yourself and it is easier to manage things like inheritance. But you are not protected from a thief finding your mnemonic.</p>
+      <p>With a passphrase, a thief needs to steal your mnemonic and install a keylogger on your machine, which is a much more difficult attack to execute. BUT, if you forget your passphrase, your crypto is lost forever, there is no way to recover. You could potentially write it down, and store it, somewhere geographically separate from where you keep the mnemonic.</p>
     </div>
 
     <div class="footer">
