--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
       }
       .body{
           margin-top:30px;
+          width:100%;
+      }
+      .body>p{
+          width:75%;
+          margin-top:0px;
+          display:inline-block;
       }
       .header{
           width:100%;
@@ -16,6 +22,7 @@
       .header>img{
           max-width:500px;
           width:75%;
+          margin-top:12px;
       }
       .header>p{
           width:70%;
@@ -46,6 +53,9 @@
         margin-left:20px;
         display:inline-block;
       }
+      .warning{
+        background-color:yellow;
+      }
   </style>
   <body>
     <div class="header">
@@ -56,8 +66,8 @@
     </div>
 
     <div class="navigation">
-      <p><b>Links</b></p>
-      <a href="security.html">Wallet Security</a>
+      <a href="index.html">Links</a>
+      <p><b>Wallet Security</b></p>
       <a href="exchanges.html">Exchanges</a>
     </div>
 
