--- a/security.html
+++ b/security.html
@@ -22,6 +22,7 @@
       .header>img{
           max-width:500px;
           width:75%;
+          margin-top:12px;
       }
       .header>p{
           width:70%;
