--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
     </div>
 
     <div class="navigation">
-      <a href="index.html">Links</a>
-      <p><b>Wallet Security</b></p>
+      <p><b>Links</b></p>
+      <a href="security.html">Wallet Security</a>
       <a href="exchanges.html">Exchanges</a>
     </div>
 
