--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
       <p><b>Links</b></p>
       <a href="security.html">Wallet Security</a>
       <a href="exchanges.html">Exchanges</a>
+      <a href="contact.html">Contact Us</a>
+      <a href="cryptointro.pdf">PDF Pamphlet</a>
     </div>
 
     <div class="body">
@@ -87,7 +89,7 @@
       <h2>News</h2>
       <p><a href="https://coinmarketcap.com">Coin Market Cap</a></p>
       <p><a href="https://blockgeeks.com/guides/">Blockgeeks Guides</a></p>
-      <p><a href="https://www.reddit.com/user/drewshaver/m/core_crypto/">Multi Reddit</a></p>
+      <p><a href="https://www.reddit.com/user/drewshaver/m/core_crypto/">Crypto Reddit</a></p>
     </div>
 
     <div class="footer">
