--- a/security.html
+++ b/security.html
@@ -69,6 +69,8 @@
       <a href="index.html">Links</a>
       <p><b>Wallet Security</b></p>
       <a href="exchanges.html">Exchanges</a>
+      <a href="contact.html">Contact Us</a>
+      <a href="cryptointro.pdf">PDF Pamphlet</a>
     </div>
 
     <div class="body">
