--- a/contact.html
+++ b/contact.html
@@ -68,20 +68,26 @@
     <div class="navigation">
       <a href="index.html">Links</a>
       <a href="security.html">Wallet Security</a>
-      <p><b>Exchanges</b></p>
-      <a href="contact.html">Contact Us</a>
+      <a href="exchanges.html">Exchanges</a>
+      <p><b>Contact Us</b></p>
       <a href="cryptointro.pdf">PDF Pamphlet</a>
     </div>
 
     <div class="body">
-      <h2>Coming Soon</h2>
-      <a href="https://www.reddit.com/user/drewshaver/comments/6dxdh7/review_of_5_cryptocurrency_exchanges_poloniex/">Outdated review</a>
+      <h3>Please direct all inquiries to <a href="mailto:founders@dewmrax.io">founders@dewmrax.io</a></h3>
+    </div>
+
+    <div class="body">
+      <h2>About Us</h2>
+      <p>DEWMRAX Inc. was founded by Andrew Warshaver and Max Staplin, both from Allentown, PA, who have known each other for over 15 years.</p>
+      <p>Andrew Warshaver, our technical founder, has a computer science degree from Carnegie Mellon, several years of experience in high frequency trading on Wall Street, and multiple years of experience developing smart contracts on both the Bitcoin and Ethereum networks.</p>
+      <p>Max Staplin, our business/legal founder, graduated from George Washington University Law School and has worked at a boutique law firm in Philadelphia for the past six years.</p>
     </div>
 
     <div class="footer">
-        <p class="subheader">
-        This is not investment advice. The materials here are for educational purposes only. Always do your own research.
-        </p>
+      <p class="subheader">
+      This is not investment advice. The materials here are for educational purposes only. Always do your own research.
+      </p>
     </div>
   </body>
 </html>
