--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@
     </div>
 
     <div class="body">
-      <h3>Please direct all inquiries to <a href="mailto:founders@dewmrax.io">founders@dewmrax.io</a></h3>
+      <h3 style="font-family:Arial">Please direct all inquiries to <a href="mailto:founders@dewmrax.io">founders@dewmrax.io</a></h3>
     </div>
 
     <div class="body">
