--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
       .warning{
         background-color:yellow;
       }
+      .h2{
+        font-family:Arial;
+      }
   </style>
   <body>
     <div class="header">
