--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
           margin-top:0px;
           display:inline-block;
       }
+      .body>h2{
+        font-family:Arial;
+      }
       .header{
           width:100%;
       }
@@ -55,9 +58,6 @@
       }
       .warning{
         background-color:yellow;
-      }
-      .h2{
-        font-family:Arial;
       }
   </style>
   <body>
