--- a/security.html
+++ b/security.html
@@ -16,6 +16,9 @@
           margin-top:0px;
           display:inline-block;
       }
+      .body>h2{
+        font-family:Arial;
+      }
       .header{
           width:100%;
       }
