--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div class="header">
         <img src="http://dewmrax.io/logo.png"/>
         <p class="subheader">
-        DEWMRAX Inc. is a cryptocurrency investment company that currently focuses on autonomous high frequency trading. We have prepared this information to help you start safely investing in cryptocurrency entirely on your own.
+        DEWMRAX Inc. is a cryptocurrency investment company that currently focuses on autonomous high frequency trading. We have prepared this information to help you start safely investing in cryptocurrency entirely on your own. This is not investment advice. The materials here are for educational purposes only. Always do your own research.
         </p>
     </div>
 
@@ -93,12 +93,6 @@
       <p><a href="https://coinmarketcap.com">Coin Market Cap</a></p>
       <p><a href="https://blockgeeks.com/guides/">Blockgeeks Guides</a></p>
       <p><a href="https://www.reddit.com/user/drewshaver/m/core_crypto/">Crypto Reddit</a></p>
-    </div>
-
-    <div class="footer">
-        <p class="subheader">
-        This is not investment advice. The materials here are for educational purposes only. Always do your own research.
-        </p>
     </div>
   </body>
 </html>
