--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,9 @@
       .body>h2{
         font-family:Arial;
       }
+      .body>h3{
+        font-family:Arial;
+      }
       .header{
           width:100%;
       }
@@ -77,7 +80,7 @@
     </div>
 
     <div class="body">
-      <h3 style="font-family:Arial">Please direct all inquiries to <a href="mailto:founders@dewmrax.io">founders@dewmrax.io</a></h3>
+      <h3>Please direct all inquiries to <a href="mailto:founders@dewmrax.io">founders@dewmrax.io</a></h3>
     </div>
 
     <div class="body">
