--- a/index.html
+++ b/index.html
@@ -77,19 +77,19 @@
     </div>
 
     <div class="body">
-      <h2>USD Exchanges</h2>
+      <h2>Popular USD Exchanges</h2>
       <p><a href="https://gemini.com">Gemini</a></p>
       <p><a href="https://coinbase.com">Coinbase</a></p>
     </div>
 
     <div class="body">
-      <h2>Crypto Exchanges</h2>
+      <h2>Popular Crypto Exchanges</h2>
       <p><a href="https://bittrex.com">Bittrex</a></p>
       <p><a href="https://binance.com">Binance</a></p>
     </div>
 
     <div class="body">
-      <h2>News</h2>
+      <h2>Popular News Outlets</h2>
       <p><a href="https://coinmarketcap.com">Coin Market Cap</a></p>
       <p><a href="https://blockgeeks.com/guides/">Blockgeeks Guides</a></p>
       <p><a href="https://www.reddit.com/user/drewshaver/m/core_crypto/">Crypto Reddit</a></p>
