--- a/contact.html
+++ b/contact.html
@@ -80,14 +80,14 @@
     </div>
 
     <div class="body">
-      <h3>Please direct all inquiries to <a href="mailto:founders@dewmrax.io">founders@dewmrax.io</a></h3>
+      <h2>Please direct all inquiries to <a href="mailto:founders@dewmrax.io">founders@dewmrax.io</a></h2>
     </div>
 
     <div class="body">
       <h2>About Us</h2>
       <p>DEWMRAX Inc. was founded by Andrew Warshaver and Max Staplin, both from Allentown, PA, who have known each other for over 15 years.</p>
       <p>Andrew Warshaver, our technical founder, has a computer science degree from Carnegie Mellon, several years of experience in high frequency trading on Wall Street, and multiple years of experience developing smart contracts on both the Bitcoin and Ethereum networks.</p>
-      <p>Max Staplin, our business/legal founder, graduated from George Washington University Law School and has worked at a boutique law firm in Philadelphia for the past six years.</p>
+      <p>Max Staplin, our business/legal founder, graduated from George Washington University Law School and previously worked at a boutique law firm in Philadelphia for the past six years.</p>
     </div>
   </body>
 </html>
