--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
           font-family:Arial;
           margin-top:4px;
       }
+      .body>a{
+        font-size:14pt;
+        font-family:Arial;
+      }
       .navigation>a{
         font-size:14pt;
         font-family:Arial;
@@ -86,6 +90,12 @@
       <h2>Popular Crypto Exchanges</h2>
       <p><a href="https://bittrex.com">Bittrex</a></p>
       <p><a href="https://binance.com">Binance</a></p>
+    </div>
+
+    <div class="body">
+      <h2>Popular Hardware Wallets</h2>
+      <p><a href="https://trezor.io">Trezor</a></p>
+      <p><a href="https://www.ledgerwallet.com/products/ledger-nano-s">Ledger Nano S</a></p>
     </div>
 
     <div class="body">
