--- a/contact.html
+++ b/contact.html
@@ -46,6 +46,10 @@
           font-family:Arial;
           margin-top:4px;
       }
+      .body>a{
+        font-size:14pt;
+        font-family:Arial;
+      }
       .navigation>a{
         font-size:14pt;
         font-family:Arial;
