--- a/security.html
+++ b/security.html
@@ -43,6 +43,10 @@
           font-family:Arial;
           margin-top:4px;
       }
+      .body>a{
+        font-size:14pt;
+        font-family:Arial;
+      }
       .navigation>a{
         font-size:14pt;
         font-family:Arial;
