--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
           font-family:Arial;
           margin-top:4px;
       }
-      .body>a{
+      .body>p>a{
         font-size:14pt;
         font-family:Arial;
       }
