--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           font-family:Arial;
           margin-top:4px;
       }
-      .body>a{
+      .body>p>a{
         font-size:14pt;
         font-family:Arial;
       }
