--- a/index.html
+++ b/index.html
@@ -1,108 +1,10 @@
-<!doctype html>
 <html>
   <head>
-    <title>DEWMRAX Inc.</title>
+    <title>Bitsonic Capital</title>
   </head>
-  <style>
-      div{
-        text-align:center;
-      }
-      .body{
-          margin-top:30px;
-          width:100%;
-      }
-      .body>p{
-          width:75%;
-          margin-top:0px;
-          display:inline-block;
-      }
-      .body>h2{
-        font-family:Arial;
-      }
-      .header{
-          width:100%;
-      }
-      .header>img{
-          max-width:430px;
-          width:75%;
-          margin-top:12px;
-      }
-      .header>p{
-          width:70%;
-          display:inline-block;
-      }
-      .footer{
-          margin-top:30px;
-          right: 0;
-          bottom: 0;
-          left: 0;
-          padding: 1rem;
-          text-align: center;
-      }
-      .subheader{
-          font-family:Arial;
-          margin-top:4px;
-      }
-      .body>p>a{
-        font-size:14pt;
-        font-family:Arial;
-      }
-      .navigation>a{
-        font-size:14pt;
-        font-family:Arial;
-        margin-right:20px;
-        margin-left:20px;
-      }
-      .navigation>p{
-        font-size:14pt;
-        font-family:Arial;
-        margin-right:20px;
-        margin-left:20px;
-        display:inline-block;
-      }
-      .warning{
-        background-color:yellow;
-      }
-  </style>
   <body>
-    <div class="header">
-        <img src="http://dewmrax.io/logo.png"/>
-        <p class="subheader">
-        DEWMRAX Inc. is a cryptocurrency investment company that currently focuses on autonomous high frequency trading. We have prepared this information to help you start safely investing in cryptocurrency entirely on your own. This is not investment advice. The materials here are for educational purposes only. Always do your own research.
-        </p>
-    </div>
-
-    <div class="navigation">
-      <p><b>Links</b></p>
-      <a href="security.html">Wallet Security</a>
-      <a href="exchanges.html">Exchanges</a>
-      <a href="contact.html">Contact Us</a>
-      <a href="cryptointro.pdf">PDF Pamphlet</a>
-    </div>
-
-    <div class="body">
-      <h2>Popular USD Exchanges</h2>
-      <p><a href="https://gemini.com">Gemini</a></p>
-      <p><a href="https://coinbase.com">Coinbase</a></p>
-    </div>
-
-    <div class="body">
-      <h2>Popular Crypto Exchanges</h2>
-      <p><a href="https://bittrex.com">Bittrex</a></p>
-      <p><a href="https://binance.com">Binance</a></p>
-    </div>
-
-    <div class="body">
-      <h2>Popular Hardware Wallets</h2>
-      <p><a href="https://trezor.io">Trezor</a></p>
-      <p><a href="https://www.ledgerwallet.com/products/ledger-nano-s">Ledger Nano S</a></p>
-    </div>
-
-    <div class="body">
-      <h2>Popular News Outlets</h2>
-      <p><a href="https://coinmarketcap.com">Coin Market Cap</a></p>
-      <p><a href="https://blockgeeks.com/guides/">Blockgeeks Guides</a></p>
-      <p><a href="https://www.reddit.com/user/drewshaver/m/core_crypto/">Crypto Reddit</a></p>
-    </div>
+    <p>
+      <img src="logo.png">
+    </p>
   </body>
 </html>
