--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <title>Bitsonic Capital</title>
   </head>
   <body>
-    <p>
-      <img src="logo.png">
+    <p style='text-align:center'>
+      <img src='logo.png' style='width:80%'>
     </p>
   </body>
 </html>
