--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
     <p style='text-align:center'>
       <img src='logo.png' style='width:80%'>
     </p>
+    <p style='text-align:center'>
+      Contact: <a href='mailto:info@bitsonic.capital'>info@bitsonic.capital</a>
+    </p>
   </body>
 </html>
