--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <p style='text-align:center'>
       <img src='logo.png' style='width:80%'>
     </p>
-    <p style='text-align:center'>
+    <p style='text-align:center;font-size:x-large'>
       Contact: <a href='mailto:info@bitsonic.capital'>info@bitsonic.capital</a>
     </p>
   </body>
