--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>Bitsonic Capital</title>
   </head>
   <body>
-    <p style='text-align:center'>
+    <p style='text-align:center;padding-top:40px'>
       <img src='logo.png' style='width:80%'>
     </p>
     <p style='text-align:center;font-size:x-large'>
