--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <img src='logo.png' style='width:80%'>
     </p>
     <p style='text-align:center;font-size:x-large'>
-      Contact: <a href='mailto:info@bitsonic.capital'>info@bitsonic.capital</a>
+      Contact: <a href='mailto:info@bitsonic.capital'>founders@dewmrax.io</a>
     </p>
   </body>
 </html>
