--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   </head>
   <body>
     <p style='text-align:center;padding-top:40px'>
-      <img src='logo.png' style='width:80%'>
+      DEWMRAX
     </p>
     <p style='text-align:center;font-size:x-large'>
-      Contact: <a href='mailto:info@bitsonic.capital'>founders@dewmrax.io</a>
+      Contact: <a href='mailto:founders@dewmrax.io'>founders@dewmrax.io</a>
     </p>
   </body>
 </html>
