--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
   </head>
   <body>
-    <p style='text-align:center;padding-top:40px'>
+    <p style='text-align:center;padding-top:40px;font-size:xxx-large'>
       DEWMRAX
     </p>
     <p style='text-align:center;font-size:x-large'>
